<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.SighInFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLoginImage"
                android:layout_width="@dimen/_320sdp"
                android:layout_height="@dimen/_300sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/sign_in" />

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/india_s_last_minute_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_or_sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
                app:boxCornerRadiusBottomStart="@dimen/_13sdp"
                app:boxCornerRadiusTopEnd="@dimen/_13sdp"
                app:boxCornerRadiusTopStart="@dimen/_13sdp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_call_24"
                    android:drawablePadding="@dimen/_7sdp"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="#8d99ae"
                android:text="@string/Continue"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="@dimen/_8sdp" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
