<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.OTPFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tpOTPFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
        app:title="@string/otp_verification"
        app:titleTextColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.30dp"
        android:background="#DAD4D4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tpOTPFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="78.00dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/we_have_sent_verification_code_to"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_91"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10.40dp"
            android:layout_marginTop="26.00dp"
            android:orientation="horizontal"
            android:weightSum="6">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5.20dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:boxCornerRadiusBottomEnd="19.50dp"
                app:boxCornerRadiusBottomStart="19.50dp"
                app:boxCornerRadiusTopEnd="19.50dp"
                app:boxCornerRadiusTopStart="19.50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="-"
                    android:inputType="number"
                    android:maxLength="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5.20dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:boxCornerRadiusBottomEnd="19.50dp"
                app:boxCornerRadiusBottomStart="19.50dp"
                app:boxCornerRadiusTopEnd="19.50dp"
                app:boxCornerRadiusTopStart="19.50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="-"
                    android:inputType="number"
                    android:maxLength="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5.20dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:boxCornerRadiusBottomEnd="19.50dp"
                app:boxCornerRadiusBottomStart="19.50dp"
                app:boxCornerRadiusTopEnd="19.50dp"
                app:boxCornerRadiusTopStart="19.50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="-"
                    android:inputType="number"
                    android:maxLength="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5.20dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:boxCornerRadiusBottomEnd="19.50dp"
                app:boxCornerRadiusBottomStart="19.50dp"
                app:boxCornerRadiusTopEnd="19.50dp"
                app:boxCornerRadiusTopStart="19.50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="-"
                    android:inputType="number"
                    android:maxLength="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5.20dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:boxCornerRadiusBottomEnd="19.50dp"
                app:boxCornerRadiusBottomStart="19.50dp"
                app:boxCornerRadiusTopEnd="19.50dp"
                app:boxCornerRadiusTopStart="19.50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="-"
                    android:inputType="number"
                    android:maxLength="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5.20dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:boxCornerRadiusBottomEnd="19.50dp"
                app:boxCornerRadiusBottomStart="19.50dp"
                app:boxCornerRadiusTopEnd="19.50dp"
                app:boxCornerRadiusTopStart="19.50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOTP6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="-"
                    android:inputType="number"
                    android:maxLength="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="58.50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:cornerRadius="10.40dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>